Fixed event descriptions not wrapping correctly.

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -167,7 +167,6 @@ img{
 #eventDetailsDesc {
 	margin-top: 20px;
 	color: #444444;
-	white-space: pre;
 }
 
 #eventDetailsDesc a {
